# snipersim

./: .gitignore  LLVM.md  Makefile  Makefile.config  record-trace  run-sniper
common/: Makefile.common
common/performance_model/: performance_model.h
common/performance_model/performance_models/: micro_op_performance_model.cc  micro_op_performance_model.h
common/performance_model/performance_models/core_model/: core_model.cc  core_model.h  core_model_llvm.cc  core_model_llvm.h  dynamic_micro_op_llvm.cc  dynamic_micro_op_llvm.h  llvm_meta.h
common/performance_model/performance_models/interval_performance_model/: interval_contention_llvm.cc  interval_contention_llvm.h
common/performance_model/performance_models/micro_op/: dynamic_micro_op.h  instruction_decoder_wlib.cc  register_dependencies.h
common/performance_model/performance_models/rob_performance_model/: rob_contention_llvm.cc  rob_contention_llvm.h
common/system/: simulator.cc
common/trace_frontend/: trace_manager.cc  trace_manager.h  trace_thread.cc  trace_thread.h
config/: base_llvm.cfg  llvm.cfg
decoder_lib/: Makefile  decoder.cc  decoder.h  llvm_decoder.cc  llvm_decoder.h
diy_lib/: Makefile  README.md  diy.cc  diy.h
docker/: Makefile
frontend/pin-frontend/sift/: makefile
llvm/: CMakeLists.txt  cfg.txt
llvm/src/: LLVMReader.cc  LLVMReader.h
sift/: llvm_reader.cc  llvm_reader.h  sift_format.h
standalone/: Makefile
test/fft/: fft
test/magic/: Makefile  matmul.ll  power.py  power.txt  power.xml
test/magic/matmul/: trace_main.txt
test/magic/parallel-add/: trace_3.txt  trace_5.txt  trace_7.txt  trace_8.txt  trace_9.txt
test/mat-magic/: Makefile  diy.txt  magic  magic.cpp  magic.ll  trace.txt
test/matmul-magic/: Makefile  magic.ll  matmul.ll  trace-matmul.txt
trace/: CMakeLists.txt  TraceInfo.cpp
trace/inject/: Injection.bc  Injection.c  Injection.ll
trace/prepare/parallel-add/: trace_0.txt  trace_1.txt  trace_2.txt  trace_4.txt  trace_6.txt  trace_main.txt
trace/test/: matmul.c  parallel-add.c  parallel-add.ll
